--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "doctrine/dbal": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.83",
         "laravel/sanctum": "^2.15",
